<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="14dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="230dp"
                android:layout_height="110dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/gotologin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:textColor="@color/lightred"
                android:textStyle="bold"
                android:textSize="17dp"
                android:padding="3dp"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/name"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/email"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/userpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/confpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confpass"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/userjob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/job"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold"
             />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secques"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <EditText
            android:id="@+id/secques"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/answer"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male"
                android:textColor="@color/darkgrey"
                android:textStyle="bold"
                android:textSize="18dp"/>

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female"
                android:textColor="@color/darkgrey"
                android:textStyle="bold"
                android:textSize="18dp"
                />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/birthdate_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="35dp"
                android:padding="3dp"
                android:layout_weight="1"
                android:text="@string/birthdate"
                android:background="@color/beige"
                android:textColor="@color/lightred"/>

            <TextView
                android:id="@+id/birthdate_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="....-..-.."
                android:padding="5dp"
                android:textColor="@color/orange"
                android:textSize="19dp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/button"
            android:textColor="@color/orange"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/signup" />

    </LinearLayout>
</ScrollView>