<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetPassword"
    android:background="@drawable/gradient_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="200dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/reset"
                android:textColor="@color/darkgrey"
                android:textStyle="bold"
                android:textSize="23dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/emailforgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textColor="@color/darkgrey"
            android:textStyle="bold"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/secques2"
            android:layout_marginTop="28dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:textColor="@color/orange"
            android:textStyle="bold"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/answerforgotpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/answer"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/newpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/newpassword"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/confnewpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/confpass"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/resetpassbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset2"
            android:background="@drawable/button"
            android:textColor="@color/orange"
            android:textSize="18dp"
            android:textStyle="bold"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginRight="14dp"/>

    </LinearLayout>
</ScrollView>