<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/loginemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/loginpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="20dp"
            android:textColor="@color/lightred"
            android:textColorHint="@color/lightred"
            android:textStyle="bold"
             />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberme"
                android:layout_width="191dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rememberme"
                android:textColor="@color/darkgrey"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="135dp"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:text="@string/forget"
                android:textColor="@color/darkgrey"
                android:textSize="17dp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="@color/orange"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/signup"
            android:textSize="17dp"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>