<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".shoppingCart"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp">

            <Button
                android:id="@+id/backfrom_shoppingcart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="19dp"
                android:background="@drawable/button"
                android:layout_gravity="center_vertical"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp"
            android:layout_marginRight="14dp"
            android:layout_marginLeft="14dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoppincart"
                android:textColor="@color/darkgrey"
                android:textSize="17dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/getloc_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/getlocation"
                android:layout_marginLeft="10dp"
                android:background="@drawable/button"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:layout_gravity="center_vertical"/>

            <Button
                android:id="@+id/buybtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/buy"
                android:background="@drawable/button"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:textSize="19dp"
                android:layout_marginLeft="3dp"/>
        </LinearLayout>

        <ListView
            android:id="@+id/shoppingcartlst"
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:verticalScrollbarPosition="right" />
    </LinearLayout>
</ScrollView>